# PitchAvatar-RAG-Sentinel

./: .env.example  .gitignore  MVP_TECH_SPEC.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.tmp/builder_verify_v1/: builder_smoke_v1.json
apps/: sentinel_console.py
datasets/retrieval/: quantum_baseline.json  retrieval_baseline_v1.json
datasets/retrieval/chunking/: chunk_boundary_v1.json
datasets/retrieval/diagnostics/: alpha_matrix_v1.json
datasets/retrieval/filters/: metadata_filtering_v1.json
datasets/retrieval/multilingual/: uk_en_mixed_v1.json
datasets/retrieval/negative/: negative_queries_v1.json
datasets/retrieval/precision/: retrieval_precision_v1.json
datasets/retrieval/regression/: .gitkeep  qrels_smoke_v1.json
datasets/retrieval/sandbox/: builder_smoke_v1.json
datasets/retrieval/smoke/: retrieval_smoke_v1.json
docs/: answer_evaluation_plan.md  artifact_analysis.md  artifact_contract.md  dataset_builder.md  datasets.md  ir_metrics.md  reporting.md  smoke_calibration_report.md
proto/: rag.proto
scripts/: bootstrap.ps1  generate_proto.py  generate_report.py  generate_trends_report.py  preview_dataset_source.py  run_dataset.py  test.ps1
src/pitchavatar_rag_sentinel/: __init__.py  config.py
tests/: README.md  __init__.py  conftest.py  test_config_safety.py  test_dataset_validation.py  test_dry_run.py
tests/clients/: test_rag_client_contract.py
tests/dataset_builder/: conftest.py  test_drafts.py  test_parsers.py  test_preview_cli.py
tests/datasets/: test_retrieval_datasets.py
tests/evaluators/: test_ir_metrics.py  test_retrieval_evaluator.py
tests/fixtures/: __init__.py  search_corpus.py
tests/reporting/: test_artifact_reports.py  test_metrics.py  test_sentinel_console.py  test_trends.py
tests/retrieval/: __init__.py  test_dataset_flow.py  test_retrieval_flow_cleanup.py
tests/search/: test_search_filters.py
tests/smoke/: test_smoke.py  test_smoke_opensearch.py
tests/workflow/: test_document_workflow.py
(+25 files in other folders)
